--- a/Todo/Content/Site.css
+++ b/Todo/Content/Site.css
@@ -22,3 +22,16 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/* set card */
+.card {
+    border:solid;
+    border-radius: 5px;
+    height: 100%;
+    background-color: gainsboro;
+}
+.row.equal {
+    display: flex;
+    flex-wrap: wrap;
+}
+
