--- a/Todo/Views/Home/Index.cshtml
+++ b/Todo/Views/Home/Index.cshtml
@@ -3,29 +3,40 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Welcome to Todos</h1>
+    <p class="lead">ASP.NET Web App using HTML, CSS and JavaScript.</p>
+    <p><a href="/todolists" class="btn btn-primary btn-lg">Todo List &raquo;</a></p>
 </div>
 
-<div class="row">
+
+<div class="row equal">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <div class="card">
+            <div class="card-body text-center">
+                <h2>Find Code on Github</h2>
+                <p class="card-text">
+                    ASP.NET MVC Todo app source code can be found on github
+                </p>
+                <p class="text-center"><a class="btn btn-default" href="https://github.com/wilbobraggins/TodoMVC/tree/master/Todo" target="_blank">Learn more <i class="fab fa-github"></i></a></p>
+            </div>
+        </div>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <div class="card">
+            <div class="card-body text-center">
+                <h2>Visit my Portfolio</h2>
+                <p>My Portfolio of personal and professional projects found here hosted on AWS</p>
+                <p><a class="btn btn-default" href="https://williamresume.s3-website-us-east-1.amazonaws.com" target="_blank">Learn more &raquo;</a></p>
+            </div>
+        </div>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <div class="card">
+            <div class="card-body text-center">
+                <h2>Web Hosting</h2>
+                <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+                <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867" target="_blank">Learn more &raquo;</a></p>
+            </div>
+        </div>
     </div>
 </div>
