--- a/Todo/Views/Shared/_Layout.cshtml
+++ b/Todo/Views/Shared/_Layout.cshtml
@@ -6,6 +6,10 @@
     <title>@ViewBag.Title - ToDo App</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
+    <link href="~/Content/Site.css"></link>
+    <script src="https://kit.fontawesome.com/a8b94118f3.js"></script>
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -16,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("MVC ToDo", "Index", "TodoLists", new { @class = "navbar-brand" })
+                @Html.ActionLink("MVC Todo", "Index", "TodoLists",null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
